parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> constructions
Rule 2     program -> <empty>
Rule 3     constructions -> constructions construction
Rule 4     constructions -> construction
Rule 5     construction -> declaration
Rule 6     construction -> fundef
Rule 7     construction -> instruction
Rule 8     declarations -> declarations declaration
Rule 9     declarations -> <empty>
Rule 10    declaration -> TYPE inits ;
Rule 11    declaration -> error ;
Rule 12    inits -> inits , init
Rule 13    inits -> init
Rule 14    init -> ID = expression
Rule 15    instructions -> instructions instruction
Rule 16    instructions -> instruction
Rule 17    instruction -> print_instr
Rule 18    instruction -> labeled_instr
Rule 19    instruction -> assignment
Rule 20    instruction -> choice_instr
Rule 21    instruction -> while_instr
Rule 22    instruction -> repeat_instr
Rule 23    instruction -> return_instr
Rule 24    instruction -> break_instr
Rule 25    instruction -> continue_instr
Rule 26    instruction -> compound_instr
Rule 27    instruction -> expression ;
Rule 28    print_instr -> PRINT expression ;
Rule 29    print_instr -> PRINT error ;
Rule 30    labeled_instr -> ID : instruction
Rule 31    assignment -> ID = expression ;
Rule 32    choice_instr -> IF ( condition ) instruction
Rule 33    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 34    choice_instr -> IF ( error ) instruction
Rule 35    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 36    while_instr -> WHILE ( condition ) instruction
Rule 37    while_instr -> WHILE ( error ) instruction
Rule 38    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 39    return_instr -> RETURN expression ;
Rule 40    continue_instr -> CONTINUE ;
Rule 41    break_instr -> BREAK ;
Rule 42    compound_instr -> { declarations instructions }
Rule 43    condition -> expression
Rule 44    const -> INTEGER
Rule 45    const -> FLOAT
Rule 46    const -> STRING
Rule 47    expression_id -> ID
Rule 48    expression -> const
Rule 49    expression -> expression_id
Rule 50    expression -> expression + expression
Rule 51    expression -> expression - expression
Rule 52    expression -> expression * expression
Rule 53    expression -> expression / expression
Rule 54    expression -> expression % expression
Rule 55    expression -> expression | expression
Rule 56    expression -> expression & expression
Rule 57    expression -> expression ^ expression
Rule 58    expression -> expression AND expression
Rule 59    expression -> expression OR expression
Rule 60    expression -> expression SHL expression
Rule 61    expression -> expression SHR expression
Rule 62    expression -> expression EQ expression
Rule 63    expression -> expression NEQ expression
Rule 64    expression -> expression > expression
Rule 65    expression -> expression < expression
Rule 66    expression -> expression LE expression
Rule 67    expression -> expression GE expression
Rule 68    expression -> ( expression )
Rule 69    expression -> ( error )
Rule 70    expression -> ID ( expr_list_or_empty )
Rule 71    expression -> ID ( error )
Rule 72    expr_list_or_empty -> expr_list
Rule 73    expr_list_or_empty -> <empty>
Rule 74    expr_list -> expr_list , expression
Rule 75    expr_list -> expression
Rule 76    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 77    args_list_or_empty -> args_list
Rule 78    args_list_or_empty -> <empty>
Rule 79    args_list -> args_list , arg
Rule 80    args_list -> arg
Rule 81    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 54
&                    : 56
(                    : 32 33 34 35 36 37 68 69 70 71 76
)                    : 32 33 34 35 36 37 68 69 70 71 76
*                    : 52
+                    : 50
,                    : 12 74 79
-                    : 51
/                    : 53
:                    : 30
;                    : 10 11 27 28 29 31 38 39 40 41
<                    : 65
=                    : 14 31
>                    : 64
AND                  : 58
BREAK                : 41
CONTINUE             : 40
ELSE                 : 33 35
EQ                   : 62
FLOAT                : 45
GE                   : 67
ID                   : 14 30 31 47 70 71 76 81
IF                   : 32 33 34 35
INTEGER              : 44
LE                   : 66
NEQ                  : 63
OR                   : 59
PRINT                : 28 29
REPEAT               : 38
RETURN               : 39
SHL                  : 60
SHR                  : 61
STRING               : 46
TYPE                 : 10 76 81
UNTIL                : 38
WHILE                : 36 37
^                    : 57
error                : 11 29 34 35 37 69 71
{                    : 42
|                    : 55
}                    : 42

Nonterminals, with rules where they appear

arg                  : 79 80
args_list            : 77 79
args_list_or_empty   : 76
assignment           : 19
break_instr          : 24
choice_instr         : 20
compound_instr       : 26 76
condition            : 32 33 36 38
const                : 48
construction         : 3 4
constructions        : 1 3
continue_instr       : 25
declaration          : 5 8
declarations         : 8 42
expr_list            : 72 74
expr_list_or_empty   : 70
expression           : 14 27 28 31 39 43 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 74 75
expression_id        : 49
fundef               : 6
init                 : 12 13
inits                : 10 12
instruction          : 7 15 16 30 32 33 33 34 35 35 36 37
instructions         : 15 38 42
labeled_instr        : 18
print_instr          : 17
program              : 0
repeat_instr         : 22
return_instr         : 23
while_instr          : 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . constructions
    (2) program -> .
    (3) constructions -> . constructions construction
    (4) constructions -> . construction
    (5) construction -> . declaration
    (6) construction -> . fundef
    (7) construction -> . instruction
    (10) declaration -> . TYPE inits ;
    (11) declaration -> . error ;
    (76) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (17) instruction -> . print_instr
    (18) instruction -> . labeled_instr
    (19) instruction -> . assignment
    (20) instruction -> . choice_instr
    (21) instruction -> . while_instr
    (22) instruction -> . repeat_instr
    (23) instruction -> . return_instr
    (24) instruction -> . break_instr
    (25) instruction -> . continue_instr
    (26) instruction -> . compound_instr
    (27) instruction -> . expression ;
    (28) print_instr -> . PRINT expression ;
    (29) print_instr -> . PRINT error ;
    (30) labeled_instr -> . ID : instruction
    (31) assignment -> . ID = expression ;
    (32) choice_instr -> . IF ( condition ) instruction
    (33) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (34) choice_instr -> . IF ( error ) instruction
    (35) choice_instr -> . IF ( error ) instruction ELSE instruction
    (36) while_instr -> . WHILE ( condition ) instruction
    (37) while_instr -> . WHILE ( error ) instruction
    (38) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (39) return_instr -> . RETURN expression ;
    (41) break_instr -> . BREAK ;
    (40) continue_instr -> . CONTINUE ;
    (42) compound_instr -> . { declarations instructions }
    (48) expression -> . const
    (49) expression -> . expression_id
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (44) const -> . INTEGER
    (45) const -> . FLOAT
    (46) const -> . STRING
    (47) expression_id -> . ID

    $end            reduce using rule 2 (program -> .)
    TYPE            shift and go to state 19
    error           shift and go to state 22
    PRINT           shift and go to state 31
    ID              shift and go to state 30
    IF              shift and go to state 5
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 18
    RETURN          shift and go to state 9
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 28
    {               shift and go to state 4
    (               shift and go to state 32
    INTEGER         shift and go to state 6
    FLOAT           shift and go to state 8
    STRING          shift and go to state 34

    continue_instr                 shift and go to state 1
    constructions                  shift and go to state 2
    expression                     shift and go to state 13
    expression_id                  shift and go to state 20
    fundef                         shift and go to state 3
    instruction                    shift and go to state 7
    while_instr                    shift and go to state 11
    compound_instr                 shift and go to state 21
    assignment                     shift and go to state 10
    declaration                    shift and go to state 24
    const                          shift and go to state 12
    return_instr                   shift and go to state 26
    break_instr                    shift and go to state 27
    repeat_instr                   shift and go to state 29
    construction                   shift and go to state 14
    print_instr                    shift and go to state 15
    labeled_instr                  shift and go to state 17
    choice_instr                   shift and go to state 25
    program                        shift and go to state 16

state 1

    (25) instruction -> continue_instr .

    TYPE            reduce using rule 25 (instruction -> continue_instr .)
    error           reduce using rule 25 (instruction -> continue_instr .)
    PRINT           reduce using rule 25 (instruction -> continue_instr .)
    ID              reduce using rule 25 (instruction -> continue_instr .)
    IF              reduce using rule 25 (instruction -> continue_instr .)
    WHILE           reduce using rule 25 (instruction -> continue_instr .)
    REPEAT          reduce using rule 25 (instruction -> continue_instr .)
    RETURN          reduce using rule 25 (instruction -> continue_instr .)
    BREAK           reduce using rule 25 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 25 (instruction -> continue_instr .)
    {               reduce using rule 25 (instruction -> continue_instr .)
    (               reduce using rule 25 (instruction -> continue_instr .)
    INTEGER         reduce using rule 25 (instruction -> continue_instr .)
    FLOAT           reduce using rule 25 (instruction -> continue_instr .)
    STRING          reduce using rule 25 (instruction -> continue_instr .)
    $end            reduce using rule 25 (instruction -> continue_instr .)
    UNTIL           reduce using rule 25 (instruction -> continue_instr .)
    }               reduce using rule 25 (instruction -> continue_instr .)
    ELSE            reduce using rule 25 (instruction -> continue_instr .)


state 2

    (1) program -> constructions .
    (3) constructions -> constructions . construction
    (5) construction -> . declaration
    (6) construction -> . fundef
    (7) construction -> . instruction
    (10) declaration -> . TYPE inits ;
    (11) declaration -> . error ;
    (76) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (17) instruction -> . print_instr
    (18) instruction -> . labeled_instr
    (19) instruction -> . assignment
    (20) instruction -> . choice_instr
    (21) instruction -> . while_instr
    (22) instruction -> . repeat_instr
    (23) instruction -> . return_instr
    (24) instruction -> . break_instr
    (25) instruction -> . continue_instr
    (26) instruction -> . compound_instr
    (27) instruction -> . expression ;
    (28) print_instr -> . PRINT expression ;
    (29) print_instr -> . PRINT error ;
    (30) labeled_instr -> . ID : instruction
    (31) assignment -> . ID = expression ;
    (32) choice_instr -> . IF ( condition ) instruction
    (33) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (34) choice_instr -> . IF ( error ) instruction
    (35) choice_instr -> . IF ( error ) instruction ELSE instruction
    (36) while_instr -> . WHILE ( condition ) instruction
    (37) while_instr -> . WHILE ( error ) instruction
    (38) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (39) return_instr -> . RETURN expression ;
    (41) break_instr -> . BREAK ;
    (40) continue_instr -> . CONTINUE ;
    (42) compound_instr -> . { declarations instructions }
    (48) expression -> . const
    (49) expression -> . expression_id
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (44) const -> . INTEGER
    (45) const -> . FLOAT
    (46) const -> . STRING
    (47) expression_id -> . ID

    $end            reduce using rule 1 (program -> constructions .)
    TYPE            shift and go to state 19
    error           shift and go to state 22
    PRINT           shift and go to state 31
    ID              shift and go to state 30
    IF              shift and go to state 5
    WHILE           shift and go to state 23
    REPEAT          shift and go to state 18
    RETURN          shift and go to state 9
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 28
    {               shift and go to state 4
    (               shift and go to state 32
    INTEGER         shift and go to state 6
    FLOAT           shift and go to state 8
    STRING          shift and go to state 34

    continue_instr                 shift and go to state 1
    expression                     shift and go to state 13
    expression_id                  shift and go to state 20
    fundef                         shift and go to state 3
    instruction                    shift and go to state 7
    while_instr                    shift and go to state 11
    compound_instr                 shift and go to state 21
    assignment                     shift and go to state 10
    declaration                    shift and go to state 24
    const                          shift and go to state 12
    return_instr                   shift and go to state 26
    break_instr                    shift and go to state 27
    repeat_instr                   shift and go to state 29
    construction                   shift and go to state 35
    print_instr                    shift and go to state 15
    labeled_instr                  shift and go to state 17
    choice_instr                   shift and go to state 25

state 3

    (6) construction -> fundef .

    TYPE            reduce using rule 6 (construction -> fundef .)
    error           reduce using rule 6 (construction -> fundef .)
    PRINT           reduce using rule 6 (construction -> fundef .)
    ID              reduce using rule 6 (construction -> fundef .)
    IF              reduce using rule 6 (construction -> fundef .)
    WHILE           reduce using rule 6 (construction -> fundef .)
    REPEAT          reduce using rule 6 (construction -> fundef .)
    RETURN          reduce using rule 6 (construction -> fundef .)
    BREAK           reduce using rule 6 (construction -> fundef .)
    CONTINUE        reduce using rule 6 (construction -> fundef .)
    {               reduce using rule 6 (construction -> fundef .)
    (               reduce using rule 6 (construction -> fundef .)
    INTEGER         reduce using rule 6 (construction -> fundef .)
    FLOAT           reduce using rule 6 (construction -> fundef .)
    STRING          reduce using rule 6 (construction -> fundef .)
    $end            reduce using rule 6 (construction -> fundef .)


state 4

    (42) compound_instr -> { . declarations instructions }
    (8) declarations -> . declarations declaration
    (9) declarations -> .

    TYPE            reduce using rule 9 (declarations -> .)
    error           reduce using rule 9 (declarations -> .)
    PRINT           reduce using rule 9 (declarations -> .)
    ID              reduce using rule 9 (declarations -> .)
    IF              reduce using rule 9 (declarations -> .)
    WHILE           reduce using rule 9 (declarations -> .)
    REPEAT          reduce using rule 9 (declarations -> .)
    RETURN          reduce using rule 9 (declarations -> .)
    BREAK           reduce using rule 9 (declarations -> .)
    CONTINUE        reduce using rule 9 (declarations -> .)
    {               reduce using rule 9 (declarations -> .)
    (               reduce using rule 9 (declarations -> .)
    INTEGER         reduce using rule 9 (declarations -> .)
    FLOAT           reduce using rule 9 (declarations -> .)
    STRING          reduce using rule 9 (declarations -> .)

    declarations                   shift and go to state 36

state 5

    (32) choice_instr -> IF . ( condition ) instruction
    (33) choice_instr -> IF . ( condition ) instruction ELSE instruction
    (34) choice_instr -> IF . ( error ) instruction
    (35) choice_instr -> IF . ( error ) instruction ELSE instruction

    (               shift and go to state 37


state 6

    (44) const -> INTEGER .

    +               reduce using rule 44 (const -> INTEGER .)
    -               reduce using rule 44 (const -> INTEGER .)
    *               reduce using rule 44 (const -> INTEGER .)
    /               reduce using rule 44 (const -> INTEGER .)
    %               reduce using rule 44 (const -> INTEGER .)
    |               reduce using rule 44 (const -> INTEGER .)
    &               reduce using rule 44 (const -> INTEGER .)
    ^               reduce using rule 44 (const -> INTEGER .)
    AND             reduce using rule 44 (const -> INTEGER .)
    OR              reduce using rule 44 (const -> INTEGER .)
    SHL             reduce using rule 44 (const -> INTEGER .)
    SHR             reduce using rule 44 (const -> INTEGER .)
    EQ              reduce using rule 44 (const -> INTEGER .)
    NEQ             reduce using rule 44 (const -> INTEGER .)
    >               reduce using rule 44 (const -> INTEGER .)
    <               reduce using rule 44 (const -> INTEGER .)
    LE              reduce using rule 44 (const -> INTEGER .)
    GE              reduce using rule 44 (const -> INTEGER .)
    ;               reduce using rule 44 (const -> INTEGER .)
    )               reduce using rule 44 (const -> INTEGER .)
    ,               reduce using rule 44 (const -> INTEGER .)


state 7

    (7) construction -> instruction .

    TYPE            reduce using rule 7 (construction -> instruction .)
    error           reduce using rule 7 (construction -> instruction .)
    PRINT           reduce using rule 7 (construction -> instruction .)
    ID              reduce using rule 7 (construction -> instruction .)
    IF              reduce using rule 7 (construction -> instruction .)
    WHILE           reduce using rule 7 (construction -> instruction .)
    REPEAT          reduce using rule 7 (construction -> instruction .)
    RETURN          reduce using rule 7 (construction -> instruction .)
    BREAK           reduce using rule 7 (construction -> instruction .)
    CONTINUE        reduce using rule 7 (construction -> instruction .)
    {               reduce using rule 7 (construction -> instruction .)
    (               reduce using rule 7 (construction -> instruction .)
    INTEGER         reduce using rule 7 (construction -> instruction .)
    FLOAT           reduce using rule 7 (construction -> instruction .)
    STRING          reduce using rule 7 (construction -> instruction .)
    $end            reduce using rule 7 (construction -> instruction .)


state 8

    (45) const -> FLOAT .

    +               reduce using rule 45 (const -> FLOAT .)
    -               reduce using rule 45 (const -> FLOAT .)
    *               reduce using rule 45 (const -> FLOAT .)
    /               reduce using rule 45 (const -> FLOAT .)
    %               reduce using rule 45 (const -> FLOAT .)
    |               reduce using rule 45 (const -> FLOAT .)
    &               reduce using rule 45 (const -> FLOAT .)
    ^               reduce using rule 45 (const -> FLOAT .)
    AND             reduce using rule 45 (const -> FLOAT .)
    OR              reduce using rule 45 (const -> FLOAT .)
    SHL             reduce using rule 45 (const -> FLOAT .)
    SHR             reduce using rule 45 (const -> FLOAT .)
    EQ              reduce using rule 45 (const -> FLOAT .)
    NEQ             reduce using rule 45 (const -> FLOAT .)
    >               reduce using rule 45 (const -> FLOAT .)
    <               reduce using rule 45 (const -> FLOAT .)
    LE              reduce using rule 45 (const -> FLOAT .)
    GE              reduce using rule 45 (const -> FLOAT .)
    ;               reduce using rule 45 (const -> FLOAT .)
    )               reduce using rule 45 (const -> FLOAT .)
    ,               reduce using rule 45 (const -> FLOAT .)


state 9

    (39) return_instr -> RETURN . expression ;
    (48) expression -> . const
    (49) expression -> . expression_id
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (44) const -> . INTEGER
    (45) const -> . FLOAT
    (46) const -> . STRING
    (47) expression_id -> . ID

    (               shift and go to state 32
    ID              shift and go to state 38
    INTEGER         shift and go to state 6
    FLOAT           shift and go to state 8
    STRING          shift and go to state 34

    expression                     shift and go to state 39
    const                          shift and go to state 12
    expression_id                  shift and go to state 20

state 10

    (19) instruction -> assignment .

    TYPE            reduce using rule 19 (instruction -> assignment .)
    error           reduce using rule 19 (instruction -> assignment .)
    PRINT           reduce using rule 19 (instruction -> assignment .)
    ID              reduce using rule 19 (instruction -> assignment .)
    IF              reduce using rule 19 (instruction -> assignment .)
    WHILE           reduce using rule 19 (instruction -> assignment .)
    REPEAT          reduce using rule 19 (instruction -> assignment .)
    RETURN          reduce using rule 19 (instruction -> assignment .)
    BREAK           reduce using rule 19 (instruction -> assignment .)
    CONTINUE        reduce using rule 19 (instruction -> assignment .)
    {               reduce using rule 19 (instruction -> assignment .)
    (               reduce using rule 19 (instruction -> assignment .)
    INTEGER         reduce using rule 19 (instruction -> assignment .)
    FLOAT           reduce using rule 19 (instruction -> assignment .)
    STRING          reduce using rule 19 (instruction -> assignment .)
    $end            reduce using rule 19 (instruction -> assignment .)
    UNTIL           reduce using rule 19 (instruction -> assignment .)
    }               reduce using rule 19 (instruction -> assignment .)
    ELSE            reduce using rule 19 (instruction -> assignment .)


state 11

    (21) instruction -> while_instr .

    TYPE            reduce using rule 21 (instruction -> while_instr .)
    error           reduce using rule 21 (instruction -> while_instr .)
    PRINT           reduce using rule 21 (instruction -> while_instr .)
    ID              reduce using rule 21 (instruction -> while_instr .)
    IF              reduce using rule 21 (instruction -> while_instr .)
    WHILE           reduce using rule 21 (instruction -> while_instr .)
    REPEAT          reduce using rule 21 (instruction -> while_instr .)
    RETURN          reduce using rule 21 (instruction -> while_instr .)
    BREAK           reduce using rule 21 (instruction -> while_instr .)
    CONTINUE        reduce using rule 21 (instruction -> while_instr .)
    {               reduce using rule 21 (instruction -> while_instr .)
    (               reduce using rule 21 (instruction -> while_instr .)
    INTEGER         reduce using rule 21 (instruction -> while_instr .)
    FLOAT           reduce using rule 21 (instruction -> while_instr .)
    STRING          reduce using rule 21 (instruction -> while_instr .)
    $end            reduce using rule 21 (instruction -> while_instr .)
    UNTIL           reduce using rule 21 (instruction -> while_instr .)
    }               reduce using rule 21 (instruction -> while_instr .)
    ELSE            reduce using rule 21 (instruction -> while_instr .)


state 12

    (48) expression -> const .

    )               reduce using rule 48 (expression -> const .)
    +               reduce using rule 48 (expression -> const .)
    -               reduce using rule 48 (expression -> const .)
    *               reduce using rule 48 (expression -> const .)
    /               reduce using rule 48 (expression -> const .)
    %               reduce using rule 48 (expression -> const .)
    |               reduce using rule 48 (expression -> const .)
    &               reduce using rule 48 (expression -> const .)
    ^               reduce using rule 48 (expression -> const .)
    AND             reduce using rule 48 (expression -> const .)
    OR              reduce using rule 48 (expression -> const .)
    SHL             reduce using rule 48 (expression -> const .)
    SHR             reduce using rule 48 (expression -> const .)
    EQ              reduce using rule 48 (expression -> const .)
    NEQ             reduce using rule 48 (expression -> const .)
    >               reduce using rule 48 (expression -> const .)
    <               reduce using rule 48 (expression -> const .)
    LE              reduce using rule 48 (expression -> const .)
    GE              reduce using rule 48 (expression -> const .)
    ;               reduce using rule 48 (expression -> const .)
    ,               reduce using rule 48 (expression -> const .)


state 13

    (27) instruction -> expression . ;
    (50) expression -> expression . + expression
    (51) expression -> expression . - expression
    (52) expression -> expression . * expression
    (53) expression -> expression . / expression
    (54) expression -> expression . % expression
    (55) expression -> expression . | expression
    (56) expression -> expression . & expression
    (57) expression -> expression . ^ expression
    (58) expression -> expression . AND expression
    (59) expression -> expression . OR expression
    (60) expression -> expression . SHL expression
    (61) expression -> expression . SHR expression
    (62) expression -> expression . EQ expression
    (63) expression -> expression . NEQ expression
    (64) expression -> expression . > expression
    (65) expression -> expression . < expression
    (66) expression -> expression . LE expression
    (67) expression -> expression . GE expression

    ;               shift and go to state 41
    +               shift and go to state 47
    -               shift and go to state 54
    *               shift and go to state 55
    /               shift and go to state 58
    %               shift and go to state 44
    |               shift and go to state 43
    &               shift and go to state 46
    ^               shift and go to state 50
    AND             shift and go to state 40
    OR              shift and go to state 45
    SHL             shift and go to state 48
    SHR             shift and go to state 51
    EQ              shift and go to state 49
    NEQ             shift and go to state 57
    >               shift and go to state 53
    <               shift and go to state 42
    LE              shift and go to state 52
    GE              shift and go to state 56


state 14

    (4) constructions -> construction .

    TYPE            reduce using rule 4 (constructions -> construction .)
    error           reduce using rule 4 (constructions -> construction .)
    PRINT           reduce using rule 4 (constructions -> construction .)
